# Comple-Coverage-Path-Planning

./: .gitignore  README.md
agent/bringup/launch/: coverage.launch
full_coverage_path_planner/: CMakeLists.txt  package.xml
full_coverage_path_planner/__test__/launch/: test_plan.launch  test_sensor_scan.launch
full_coverage_path_planner/config/: coverage_progress_visualizer_params.yaml
full_coverage_path_planner/include/: task_allocator.h
full_coverage_path_planner/include/full_coverage_path_planner/: common.h  full_coverage_path_planner.h  lidar_sensor.h  spiral_stc.h
full_coverage_path_planner/launch/: house01.launch  main.launch  multi_robot_sim.launch  optimizer.launch  path_planner.launch
full_coverage_path_planner/maps/: partition_map_1.pgm  partition_map_1.yaml  partition_map_2.pgm  partition_map_2.yaml  partition_map_3.pgm  partition_map_3.yaml  partition_map_4.pgm  partition_map_4.yaml  second_map.launch
full_coverage_path_planner/maps/house01/: map.pgm
full_coverage_path_planner/maps/house02/: map.pgm
full_coverage_path_planner/maps/house05/: map.pgm
full_coverage_path_planner/maps/house06/: map.pgm
full_coverage_path_planner/maps/house11/: map.pgm  map.yaml
full_coverage_path_planner/maps/model16/: map.pgm
full_coverage_path_planner/maps/modelHouse/: map.pgm
full_coverage_path_planner/msg/: MapPartition.msg  RobotBid.msg
full_coverage_path_planner/rviz/: fccpp_main.rviz  test.rviz  test_path_plan.rviz
full_coverage_path_planner/scripts/: gen_grid_dataset.py  map_merge.py  multi_robot_bringup.py  optimizer.py  segment_partition.py
full_coverage_path_planner/src/: common.cpp  full_coverage_path_planner.cpp  grid_partition.py  lidar_sensor.cpp  main.cpp  robot_lidar_node.cpp  spiral_stc.cpp  task_allocator.cpp  test_plan.cpp
full_coverage_path_planner/test/: simple_goal_2.yaml
full_coverage_path_planner/test/full_coverage_path_planner/: house01.rviz  partitions.launch  test_full_coverage_path_planner.launch
full_coverage_path_planner/test/include/full_coverage_path_planner/: util.h
full_coverage_path_planner/test/src/: test_common.cpp  test_spiral_stc.cpp  util.cpp
full_coverage_path_planner/worlds/: warehouse_03.world
map_pkg/: CMakeLists.txt  package.xml
map_pkg/launch/: house-01.launch  rectangle-1.launch  rooms.launch  square2.launch  warehouse_03.launch
map_pkg/maps/square/: map.pgm  model.sdf
map_pkg/models/house-01/: model.sdf
map_pkg/models/rectangle-1/: model.config  model.sdf
map_pkg/models/square2/: model.config  model.sdf
map_pkg/models/warehouse_03/: model.config  model.sdf
map_pkg/rviz/: house01.rviz  square.rviz
map_pkg/scripts/: emptyMap.py  grid_partitioning.py  sampleMap.py  saveMap.py  squreMap.py
map_pkg/worlds/: house-01.world  rectangle-1.world  square.world
mobile_robot_simulator/: CMakeLists.txt  package.xml
mobile_robot_simulator/src/: robot_bidder.cpp
nav_pkg/: package.xml
nav_pkg/launch/: amcl.launch  move_base.launch  robot_navigation.launch
nav_pkg/scripts/: init_pose.py
robot_pkg/: package.xml
robot_pkg/bringup/launch/: robot_remote.launch
robot_pkg/bringup/launch/includes/: description.launch.xml
robot_pkg/description/urdf/: robot_burger.urdf.xacro
simulation/simulation/launch/: multi_robot.launch
simulation/simulation/scripts/: lidar_sensor.py
simulation/simulation/worlds/: house01.world  house05.world  house06.world  house11.world  map.pgm  model13.world  model16.world  modelHouse.world
tracking_pid/: CHANGELOG.rst  README.md  package.xml
tracking_pid/include/controller/: controller.h
tracking_pid/src/: controller.cpp  controller_node.cpp
tracking_pid/test/: test_controller.cpp
